# skillprobe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/cli/: main.py
clawhub/: README.md  SKILL.md
clawhub/scripts/: evaluate.sh
db/: __init__.py  schema.sql  store.py
docs/: architecture.md  batch-eval-and-web.md  product-requirements.md  roadmap.md  scoring-model.md  vision.md
docs/plans/: 2026-03-19-skillprobe-hardening.md
examples/sample-skill/: SKILL.md
outputs/: evaluations.db  evaluations_export.json  in-agent-eval-report.md
outputs/batch_skills/batch_1/: eval_results.json  manifest.json
outputs/batch_skills/batch_2/: eval_results.json  manifest.json
prompts/attribution/: analyze_attribution.txt
prompts/eval_spec/: generate_spec.txt
prompts/improvement/: suggest_improvements.txt
prompts/llm_judge/: compare_outputs.txt
prompts/skill_profile/: extract_profile.txt
prompts/subagent/: baseline_arm.txt  orchestrator_dispatch.txt  skill_arm.txt
prompts/task_generation/: generate_tasks.txt
schemas/: eval_report.schema.json  eval_run.schema.json  eval_spec.schema.json  skill_profile.schema.json  task.schema.json
scripts/: SUBAGENT_EVAL_INSTRUCTIONS.md  discover_medical_skills.py  record_eval_result.py  run-medical-eval.sh  run_medical_batch_eval.py
tests/: test_cli.py  test_db_persistence.py  test_packaging.py  test_reporting.py  test_runner.py  test_scoring.py  test_strict_ab_guardrail.py  test_task_generation.py  test_validation.py
